Allow routes to /mensa to get the menu for all canteens combined
