# lib/controllers/Controller.js
@@ -3,6 +3,9 @@ const swaggerUi = require('swagger-ui-express');
 const LocalDataHelper = require('../helper/LocalDataHelper');
 const swaggerDocument = require('../swagger.json');
 
+const REGEX_LOCATIONS = 'uni|oth|oth-evening|pruefening';
+const REGEX_DAYS = 'monday|tuesday|wednesday|thursday|friday|saturday|sunday|today';
+
 function fetchMenu(locationParam, dayParam) {
   let locationTag;
 
@@ -37,15 +40,31 @@ function fetchMenu(locationParam, dayParam) {
 
 function menu(req, res) {
   console.log('GET', req.params);
+  let fetchedMenu = [];
 
-  try {
-    const fetchedMenu = fetchMenu(req.params.location, req.params.day);
-    res.status(200).json(fetchedMenu);
-  } catch (err) {
-    res.status(200).json({
-      message: 'No data available, mensa may be closed.',
+  // Return location specific menu if location is provided
+  if (req.params.location) {
+    try {
+      fetchedMenu = fetchMenu(req.params.location, req.params.day);
+    } catch (err) {
+      console.error(err);
+    }
+  } else {
+    // If not return menu combined for all locations (this will be a long)
+    REGEX_LOCATIONS.split('|').forEach((location) => {
+      try {
+        if (!fetchedMenu) {
+          fetchedMenu = [];
+        }
+
+        fetchedMenu.push(fetchMenu(location));
+      } catch (err) {
+        console.error(err);
+      }
     });
   }
+
+  res.status(200).json(fetchedMenu);
 }
 
 function toRepo(req, res) {
@@ -60,10 +79,13 @@ function addRoutes(app) {
   app.route('/')
     .get(toRepo);
 
-  app.route('/mensa/:location(uni|oth|oth-evening|pruefening)')
+  app.route('/mensa')
     .get(menu);
 
-  app.route('/mensa/:location(uni|oth|oth-evening|pruefening)/:day(monday|tuesday|wednesday|thursday|friday|saturday|sunday|today)')
+  app.route(`/mensa/:location(${REGEX_LOCATIONS})`)
+    .get(menu);
+
+  app.route(`/mensa/:location(${REGEX_LOCATIONS})/:day(${REGEX_DAYS})`)
     .get(menu);
 }
 
